--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^6.1",
         "symfony/dom-crawler": "^3.0",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "predis/predis": "^1.0"
+        "predis/predis": "^1.0",
+        "pda/pheanstalk": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
