Added export job.

--- a/supervisor/olx.conf
+++ b/supervisor/olx.conf
@@ -27,3 +27,14 @@ user=root
 numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/olx/storage/logs/update-phone-offer-count.log
+
+
+[program:export-olx]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/olx/artisan queue:work --queue=export_offers --sleep=30 --tries=1 --daemon
+autostart=true
+autorestart=true
+user=root
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/var/olx/storage/logs/export-olx.log
