--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "symfony/dom-crawler": "^3.0",
         "barryvdh/laravel-ide-helper": "^2.1",
         "predis/predis": "^1.0",
-        "pda/pheanstalk": "^3.1"
+        "pda/pheanstalk": "^3.1",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
