Added link grabber retries.

--- a/supervisor/olx.conf
+++ b/supervisor/olx.conf
@@ -38,3 +38,13 @@ user=root
 numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/olx/storage/logs/export-olx.log
+
+[program:olx-queue]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/olx/artisan queue:work --daemon
+autostart=true
+autorestart=true
+user=root
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/var/olx/storage/logs/olx-queue.log
