--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "predis/predis": "^1.0",
         "pda/pheanstalk": "^3.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "rap2hpoutre/laravel-log-viewer": "^0.6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
